# libxdg

./: .cproject  .gitmodules  .project  CMakeLists.txt  LICENSE  README.md  annotated.html  avl_tree_cache_format_page.html  avltree_8h.html  avltree_8h_source.html  avltree__p_8h_source.html  build.sh  classes.html  desktop_cache_format_page.html  dir_0b61c55142250c0cc363383afd8075a4.html  dir_2447b663897b3aa457ee4d140b481b8b.html  dir_61a4ef051073c63aeda3fe5ce648ade0.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_93824eed2e71dc564b01a650205ef0c8.html  dir_da0469c61beb2113561c044c06f303d1.html  dir_e081a7a5c590926bad9223559b89aad5.html  dir_e68e8157741866f444e17edd764ebbae.html  doc__mainpage_8h_source.html  example1_page.html  example1_src.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  index.html  pages.html  structAvlNode.html  structAvlTree.html  structFixupLinksBetweenFoldersArgs.html  structInitFromDirectoryArgs.html  structLinks.html  structMimeWeight.html  (+66 more)
cmake/: FindXDG.cmake  Install.cmake  collect_sources.cmake  platform.cmake  platform_options.cmake
cmake/platform/: FixBundle.cmake.in  MyBundleUtilities.cmake  collect_files.cmake  collect_sources.cmake  compiler_flags.cmake  doxygen.cmake  doxygen.conf.in  exclude_files.cmake  install.cmake  merge_static_libs.cmake  merge_static_libs.cmake.in  misc.cmake  options.cmake  project_build_type.cmake  tests.cmake
doc/: Doxyfile.in  doc_mainpage.h
doc/examples/: example1.c
search/: all_61.js  all_62.js  all_63.js  all_64.js  all_65.js  all_66.js  all_69.js  all_6b.js  all_6d.js  all_72.js  all_73.js  all_76.js  all_77.js  all_78.js  classes_5f.js  classes_61.js  classes_66.js  classes_6c.js  classes_78.js  defines_76.js  files_61.js  files_78.js  functions_63.js  functions_64.js  functions_66.js  functions_69.js  functions_6d.js  functions_73.js  functions_77.js  functions_78.js  pages_65.js  pages_66.js  pages_73.js  search.js  typedefs_63.js  typedefs_64.js  typedefs_72.js  typedefs_77.js  variables_64.js  variables_6c.js
src/: CMakeLists.txt  Makefile  avltree.c  avltree.h  main.c  print-mime-data.c  test-mime-data.c  test-mime.c  xdg.c  xdg.h  xdgapp.c  xdgapp.h  xdgapp_p.h  xdgappcache.c  xdgappcache.h  xdgappcache_p.h  xdgarray.c  xdgarray.h  xdgarray_p.h  xdgbasedirectory.c  xdgbasedirectory.h  xdglist.c  xdglist.h  xdgmime.c  xdgmime.h  xdgmime_p.h  xdgmimeapp.c  xdgmimeapp.h  xdgmimeapp_p.h  xdgmimearray.c  xdgmimearray.h  xdgmimearray_p.h  xdgmimedefs.h  xdgmimetheme.c  xdgmimetheme.h  xdgmimetheme_p.h  xdgtheme.c  xdgtheme.h  xdgtheme_p.h
src/basedirectory/: CMakeLists.txt  xdgbasedirectory.c  xdgbasedirectory.h
src/config/: config.h.in
src/containers/: avltree.c  avltree.h  avltree_p.h  xdglist.c  xdglist.h  xdglist_p.h
src/desktop/: xdgapp.c  xdgapp.h  xdgapp_p.h  xdgappcache.c  xdgappcache_p.h  xdgmimedefs.h
src/doc/: doc_mainpage.h
src/doc/examples/: example1.c
src/menu/: CMakeLists.txt  xdgmenu.c  xdgmenu.h  xdgmenu_p.h
src/mime/: xdgmime.c  xdgmime_p.h  xdgmimealias.c  xdgmimecache.c  xdgmimeglob.c  xdgmimeicon.c  xdgmimeint.c  xdgmimemagic.c  xdgmimeparent.c
src/themes/: xdgtheme.c  xdgtheme.h  xdgtheme_p.h
src/update-applications-cache/: CMakeLists.txt  main.c
